# mcp-server-servicenow

./: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  renovate.json  server.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/servicenow-cmdb/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
agents/: servicenow-admin.md
commands/: cmdb.md  explore-table.md  review-update-set.md  triage.md
docs/: configuration.md  deployment.md
skills/exploring-tables/: SKILL.md
skills/reviewing-update-sets/: SKILL.md
skills/reviewing-update-sets/references/: update-set-fields.md
skills/servicenow-cmdb/: SKILL.md
skills/servicenow-cmdb/references/: cmdb-tables.md
skills/triaging-incidents/: SKILL.md
skills/triaging-incidents/references/: incident-fields.md
src/servicenow_mcp/: __init__.py  cli.py  server.py
src/servicenow_mcp/auth/: sn_oauth_provider.py  sn_token_verifier.py
src/servicenow_mcp/tools/: cmdb_tools.py  system_tools.py  table_tools.py  update_set_tools.py
src/servicenow_mcp/utils/: http.py
tests/: test_http.py  test_sn_token_verifier.py
tests/integration/: test_pdi_smoke.py
